k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow
  namespace: wisecow
  labels:
    app: wisecow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
      - name: wisecow
        image: amoghlokhande/wisecow:latest

        ports:
        - containerPort: 4499

        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"

          limits:
            cpu: "250m"
            memory: "128Mi"
