k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wisecow-service
  namespace: wisecow

spec:
  selector:
    app: wisecow

  ports:
    - port: 80
      targetPort: 4499

  type: ClusterIP
